# app_for_analyzing_banking_trans

./: .flake8  config.py  main.py  pyproject.toml  user_settings.json
src/: file_reader.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_file_reader.py  test_reports.py  test_services.py  test_utils.py
